--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-next-example-app",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build -p $PORT",
     "start": "next start",
     "heroku-postbuild": "npm run build"
   },
