--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -P $PORT",
+    "start": "next start -p $PORT",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
